; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ocs_fc/extr_ocs_scsi.c_ocs_scsi_get_property_ptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ocs_fc/extr_ocs_scsi.c_ocs_scsi_get_property_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32* }

@OCS_HW_WWN_NODE = common dso_local global i32 0, align 4
@OCS_HW_WWN_PORT = common dso_local global i32 0, align 4
@OCS_HW_PORTNUM = common dso_local global i32 0, align 4
@OCS_HW_BIOS_VERSION_STRING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"invalid property request %d\0A\00", align 1
@OCS_HW_VPD = common dso_local global i32 0, align 4
@OCS_HW_VPD_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ocs_scsi_get_property_ptr(%struct.TYPE_10__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i8* null, i8** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %27 [
    i32 129, label %7
    i32 128, label %12
    i32 131, label %17
    i32 133, label %22
  ]

7:                                                ; preds = %2
  %8 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %8, i32 0, i32 0
  %10 = load i32, i32* @OCS_HW_WWN_NODE, align 4
  %11 = call i8* @ocs_hw_get_ptr(i32* %9, i32 %10)
  store i8* %11, i8** %5, align 8
  br label %28

12:                                               ; preds = %2
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 0
  %15 = load i32, i32* @OCS_HW_WWN_PORT, align 4
  %16 = call i8* @ocs_hw_get_ptr(i32* %14, i32 %15)
  store i8* %16, i8** %5, align 8
  br label %28

17:                                               ; preds = %2
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  %20 = load i32, i32* @OCS_HW_PORTNUM, align 4
  %21 = call i8* @ocs_hw_get_ptr(i32* %19, i32 %20)
  store i8* %21, i8** %5, align 8
  br label %28

22:                                               ; preds = %2
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %23, i32 0, i32 0
  %25 = load i32, i32* @OCS_HW_BIOS_VERSION_STRING, align 4
  %26 = call i8* @ocs_hw_get_ptr(i32* %24, i32 %25)
  store i8* %26, i8** %5, align 8
  br label %28

27:                                               ; preds = %2
  br label %28

28:                                               ; preds = %27, %22, %17, %12, %7
  %29 = load i8*, i8** %5, align 8
  %30 = icmp eq i8* %29, null
  br i1 %30, label %31, label %35

31:                                               ; preds = %28
  %32 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @ocs_log_debug(%struct.TYPE_10__* %32, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %31, %28
  %36 = load i8*, i8** %5, align 8
  ret i8* %36
}

declare dso_local i8* @ocs_hw_get_ptr(i32*, i32) #1

declare dso_local i32 @ocs_log_debug(%struct.TYPE_10__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
